--- a/index - onBlur.html
+++ b/index - onBlur.html
@@ -9,25 +9,25 @@
 </head>
 
 <body>
-        <script>
+    <script>
         function calcular() {
             var v1 = parseInt(document.getElementById('n1').value);
             var v2 = parseInt(document.getElementById('n2').value);
-            document.getElementById('resulatdo').innerHTML=(v1+v2);
+            document.getElementById('resultado').innerHTML = (v1 + v2);
             try {
-                if (isNaN(v1) || isNaN(v2) ) throw "Valor invalido";
-                        } catch (error) {
-                            alert(error);
-                        }
-                    }
+                if (isNaN(v1) || isNaN(v2)) throw "Valor invalido";
+            } catch (error) {
+                alert(error);
+            }
+        }
     </script>
-<form action="" method="post" >
-Valor 1: <input type="text" id="n1"><br><br>
-Valor 2: <input type="text" id="n2" onblur="calcular()"><br>
-<input type="button" onclick="calcular()" value="soma">
+    <form action="" method="post">
+        Valor 1: <input type="text" id="n1" placeholder="."><br><br>
+        Valor 2: <input type="text" id="n2" onblur="calcular()" placeholder="."><br>
+        <input type="button" onclick="calcular()" value="soma">
 
-</form>
-<h1 id="Resultado"></h1>
+    </form>
+    <h1 id="resultado"></h1>
 
 </body>
 
