Fim da aula 13-05-2023

--- a/index - 14 - test JS externo.html
+++ b/index - 14 - test JS externo.html
@@ -15,7 +15,7 @@ n2: <input type="text" name="" id="n2" placeholder="."><br>
 <input type="button" name="" id="btn" value="somar"><br>
 </form>
 <div id="resultado"></div>
-<script src="teste.js"></script>
+<script src="js - 02 - teste.js"></script>
 
 </body> 
 
