--- a/index - 01 - for e let.html
+++ b/index - 01 - for e let.html
@@ -5,11 +5,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aula JS | Externo JS</title>
+    <title>Aula JS | Operações matemática</title>
 </head>
 
 <body>
-<script src="externo.js"></script>
+    <script>
+        //pede numero
+        i = parseInt(prompt('Digite um número:'));
+        for (i; i < 10; i++) 
+        {
+            alert(i);
+        }
+    </script>
 </body>
 
 </html>
