--- a/index - 07 - operadores ternário.html
+++ b/index - 07 - operadores ternário.html
@@ -17,7 +17,8 @@
             alert('O ' + valor + ' é par')
             :
             alert('O ' + valor + ' é impar');
-
+        if(err){
+                        }
     </script>
 </body>
 
